# enum_t

./: .clang-format  .gitignore  README.md
examples/error/: CMakeLists.txt  error.cc
include/mxl/: enum.h
include/njr/: enum_t.h
